examples/test/testpolicy19356.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19356
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key31: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value30
          key38: value34
          key20: value35
      podSelector:
        matchLabels:
          key47: value47
          key46: value0
          key18: value10
